train_fox_news_11751646.out
  File "/home/lcur1144/MultiLingual_Stereotypes/train.py", line 3
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
srun: error: r29n1: task 0: Exited with exit code 1
